Hopefully fix weird android issue; cleanup and portrait mode tweak

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     background: #000;
     user-select: none;
     -webkit-user-select: none;
+    touch-action: none;
     color: #fff;
     font-family: serif;
     font-weight: bold;
