--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     -webkit-user-select: none;
     touch-action: none;
     color: #fff;
-    font-family: serif;
+    font-family: Times;
     font-weight: bold;
     font-size: 2vmax;
   }
