--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     background: #000;
     padding: 0.5em 1em 0.5em 0.5em;
     transition: right 0.2s ease;
+  }
 
-    &:hover {
-      color: #000;
-      background: #fff;
-      box-shadow: 0 0.25em 0 #000
-    }
+  .restartButton:hover {
+    color: #000;
+    background: #fff;
+    box-shadow: 0 0.25em 0 #000
   }
 </style>
 </head>
